src/lexer.c
/* Generated by re2c 4.1 on Thu Jan 29 17:26:39 2026 */
#line 1 "src/lexer.re"
#include <stdlib.h>
#include <string.h>

typedef enum {
    LEX_EOF,
    LEX_ERROR,
    LEX_IDENTIFIER,
    LEX_EQUAL,
    LEX_POINTER_ASSIGN,
    LEX_INTEGER,
    LEX_NEWLINE,
    LEX_OTHER
} TokenType;

typedef struct {
    TokenType type;
    const char *start;
    const char *end;
    int line;
} Token;

typedef struct {
    const char *buffer;
    int length;
    int pos;
    int line;
} LexerState;

#line 47 "src/lexer.re"


static void skip_line_continuation(const char **cur, const char *lim, int *line) {
    const char *mar, *ctx;
    const char *p = *cur;
    
skip:
    
#line 41 "src/lexer.c"
{
	unsigned char yych;
	yych = *p;
	switch (yych) {
		case '\t':
		case ' ': goto yy3;
		case '\n':
		case ';': goto yy5;
		case '\r': goto yy6;
		case '!': goto yy7;
		case '&': goto yy9;
		default: goto yy1;
	}
yy1:
	++p;
yy2:
#line 63 "src/lexer.re"
	{ *cur = p - 1; return; }
#line 60 "src/lexer.c"
yy3:
	yych = *++p;
	switch (yych) {
		case '\t':
		case ' ': goto yy3;
		default: goto yy4;
	}
yy4:
#line 59 "src/lexer.re"
	{ goto skip; }
#line 71 "src/lexer.c"
yy5:
	++p;
#line 61 "src/lexer.re"
	{ *line += 1; goto skip; }
#line 76 "src/lexer.c"
yy6:
	yych = *++p;
	switch (yych) {
		case '\n': goto yy5;
		default: goto yy2;
	}
yy7:
	yych = *++p;
	switch (yych) {
		case '\n':
		case '\r': goto yy8;
		default: goto yy7;
	}
yy8:
#line 60 "src/lexer.re"
	{ goto skip; }
#line 93 "src/lexer.c"
yy9:
	++p;
#line 62 "src/lexer.re"
	{ goto skip; }
#line 98 "src/lexer.c"
}
#line 64 "src/lexer.re"

}

Token lex(const char *str, int len, int *line) {
    static Token token;
    const char *cur = str, *lim = str + len;
    const char *mar, *ctx;
    
    while (1) {
        token.start = cur;
        token.line = *line;
        
        
#line 114 "src/lexer.c"
{
	unsigned char yych;
	yych = *cur;
	switch (yych) {
		case 0x00: goto yy11;
		case '\t':
		case ' ': goto yy14;
		case '\n':
		case ';': goto yy16;
		case '\r': goto yy17;
		case '!': goto yy18;
		case '&': goto yy20;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy21;
		case '=': goto yy23;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy25;
		default: goto yy12;
	}
yy11:
	++cur;
#line 95 "src/lexer.re"
	{ token.type = LEX_EOF; goto token_end; }
#line 197 "src/lexer.c"
yy12:
	++cur;
yy13:
#line 96 "src/lexer.re"
	{ token.type = LEX_OTHER; goto token_end; }
#line 203 "src/lexer.c"
yy14:
	yych = *++cur;
	switch (yych) {
		case '\t':
		case ' ': goto yy14;
		default: goto yy15;
	}
yy15:
#line 83 "src/lexer.re"
	{ continue; }
#line 214 "src/lexer.c"
yy16:
	++cur;
#line 84 "src/lexer.re"
	{ *line += 1; token.type = LEX_NEWLINE; goto token_end; }
#line 219 "src/lexer.c"
yy17:
	yych = *++cur;
	switch (yych) {
		case '\n': goto yy16;
		default: goto yy13;
	}
yy18:
	yych = *++cur;
	switch (yych) {
		case '\n':
		case '\r': goto yy19;
		default: goto yy18;
	}
yy19:
#line 85 "src/lexer.re"
	{ continue; }
#line 236 "src/lexer.c"
yy20:
	++cur;
#line 87 "src/lexer.re"
	{ skip_line_continuation(&cur, lim, line); continue; }
#line 241 "src/lexer.c"
yy21:
	yych = *++cur;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy21;
		default: goto yy22;
	}
yy22:
#line 93 "src/lexer.re"
	{ token.type = LEX_INTEGER; goto token_end; }
#line 260 "src/lexer.c"
yy23:
	yych = *++cur;
	switch (yych) {
		case '>': goto yy27;
		default: goto yy24;
	}
yy24:
#line 90 "src/lexer.re"
	{ token.type = LEX_EQUAL; goto token_end; }
#line 270 "src/lexer.c"
yy25:
	yych = *++cur;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy25;
		default: goto yy26;
	}
yy26:
#line 92 "src/lexer.re"
	{ token.type = LEX_IDENTIFIER; goto token_end; }
#line 342 "src/lexer.c"
yy27:
	++cur;
#line 89 "src/lexer.re"
	{ token.type = LEX_POINTER_ASSIGN; goto token_end; }
#line 347 "src/lexer.c"
}
#line 97 "src/lexer.re"

    }
    
token_end:
    token.end = cur;
    return token;
}

void next_token_c(const char* buffer, int length, int* line, 
                  int* type, int* start, int* end) {
    Token t = lex(buffer, length, line);
    *type = t.type;
    *start = t.start - buffer;  // Calculate offset
    *end = t.end - buffer;
}
